# marginaleffects

./: $jewish pussy got me squealing  .Rbuildignore  .covrignore  .gitignore  CLAUDE.md  Contrast difficulties.Rmd  DESCRIPTION  LICENSE.md  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  README.qmd  _pkgdown.yml  air.toml  cran-comments.md  pyproject.toml  size.R  skills.sh.json  test-pkg-rms.R  tmp.R  todo.md  trash.R  trash.qmd
.github/: benchmark_docs.md
.scrutin/: config.toml  state.db
R/: RcppExports.R  aaa_median_or_mode.R  add_attributes.R  add_hypothesis.R  aggregate.R  align_J_V.R  arg_name_change.R  attributes.R  autodiff.R  averages.R  backtransform.R  bootstrap.R  bootstrap_boot.R  bootstrap_boot2.R  bootstrap_fwb.R  bootstrap_fwb2.R  bootstrap_rsample.R  bootstrap_rsample2.R  bootstrap_simulation.R  broom.R  by.R  ci.R  class.R  comparisons.R  complete_levels.R  components.R  config.R  conformal.R  construct_call.R  counterfactual.R  counterfactual_typical.R  datagrid.R  delta_se.R  deltam.R  deltamethod.R  deprecate_arg.R  deprecated.R  equivalence.R  estimates.R  find_categorical.R  (+240 more)
altdoc/: custom.scss  freeze.rds  mkdocs.yml  pkgdown.yml  preamble_vignettes_qmd.yml  quarto_website.yml
bak/: alternative_software.html  machine_learning.qmd
book/: functions.qmd  index.qmd  references.bib
data/: MASS_polr_01.dta  affairs.dta  betareg_betareg_01.dta  fixest_fixest_01.dta  ivreg_ivreg_01.dta  stats_glm_01.dta  stats_lm_01.dta  supported_models.rda
data-raw/: supported_models.R  supported_models.csv
docs/: 404.html  CITATION.html  CITATION.md  (+13 more)
(+1986 files in other folders)
