[project]
name = "marginaleffects"
version = "0.3.1"
license = "GPL-3.0-or-later"
description = "Predictions, counterfactual comparisons, slopes, and hypothesis tests for statistical models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "formulaic >=1.0.2",
    "narwhals >=1.34.0",
    "numpy >=2.0.0",
    "patsy >=1.0.1",
    "polars >=1.26.0",
    "pydantic >=2.10.3",
    "plotnine >=0.14.5",
    "scipy >=1.14.1",
    "pyarrow>=19.0.1",
]

[tool.setuptools.packages.find]
exclude = ["qmd_files/*"]


[project.optional-dependencies]
autodiff = [
    "jax >=0.4.0",
]
test = [
    "duckdb >=1.1.2",
    "matplotlib >=3.7.1",
    "linearmodels >=6.1",
    "pandas >=2.2.2",
    "pre-commit>=4.2.0",
    "pyarrow >=17.0.0",
    "pyfixest >=0.28.0",
    "statsmodels >=0.14.0",
    "scikit-learn",
    "typing-extensions >=4.7.0",
    "xgboost",
]

[tool.uv]
dev-dependencies = [
  "ipython",
  "patsy",
  "pytest >=8.1.1,<9",
  "pytest-xdist >=3.6.1",
  "ruff>=0.6.4",
  "pre-commit",
]


[tool.pytest.ini_options]
markers =[
    "plot: marks plot tests (slow)",
]
filterwarnings = [
    "ignore::scipy.optimize.OptimizeWarning",
    "ignore::statsmodels.tools.sm_exceptions.ConvergenceWarning",
    "ignore:Dropping rows with missing observations:UserWarning",
]

[tool.ruff.lint]
extend-ignore = ["F405", "F403", "F811"]
